--- a/assets/scss/custom/_buttons.scss
+++ b/assets/scss/custom/_buttons.scss
@@ -6,3 +6,14 @@
   background-color: #223464;
   color: #FFFFFF;
 }
+
+.btn-danger, .btn-submit{
+  background-image: linear-gradient(120deg, $brand 0%, $brand-state 100%) !important;
+}
+.btn-outline-danger:hover{
+  background-image: linear-gradient(120deg, $brand 0%, $brand-state 100%) !important;
+}
+
+.fa-github, .fa-twitter{
+  font-size: 21px !important;
+}
