--- a/assets/scss/custom/_sections.scss
+++ b/assets/scss/custom/_sections.scss
@@ -5,34 +5,32 @@
     position: relative;
 
     .form-control-search{
-      border-radius: 30px;
+      border-radius: 65px;
       box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
       border: none;
       color: $text-primary;
       display: block;
       font-size: 14px;
       font-weight: 300;
-      height: 50px;
+      height: 60px;
       line-height: 1.42857;
-      padding: 6px 25px;
+      padding: 6px 36px;
       vertical-align: middle;
-      transition: background-color .2s;
     }
 
     .btn-submit{
       position: absolute;
-      right: 10px;
+      right: 9px;
       border: none;
-      padding: 10px 12px;
+      padding: 15px 16px;
       border-radius: 25px;
-      height: 36px;
+      height: 46px;
       line-height: 30px;
-      width: 36px;
+      width: 46px;
       display: block;
       top: 7px;
       background: $brand-state;
       color: #ffffff;
-      transition: all .2s;
 
       .icon-search{
         font-size: 18px;
@@ -47,8 +45,16 @@
   margin-bottom: 150px;
 
   .text-description{
-    font-size: 14px;
+    font-size: 18px;
     font-weight: lighter;
+    color: $text-primary;
+    margin-bottom: 24px;
+  }
+
+  .text-title{
+    margin: 20px 0;
+    font-size: 50px;
+    color: $text-primary;
   }
 
   .form-group.form-subscribe{
@@ -59,20 +65,23 @@
       border: 1px solid $text-primary;
       color: $text-primary;
       display: block;
+      padding: 23px;
       font-weight: 400;
       font-size: 14px;
+      background-color: $background-color;
     }
     .btn-submit{
       position: absolute;
-      right: 4px;
+      right: 10px;
       border: none;
       border-radius: 30px;
       display: block;
       font-weight: 200;
-      top: 3px;
+      font-size: 13px;
+      padding: 6px 20px;
+      top: 9px;
       background: $brand-state;
       color: #ffffff;
-      transition: all .2s;
     }
   }
 }
