--- a/assets/scss/custom/_variables.scss
+++ b/assets/scss/custom/_variables.scss
@@ -1,9 +1,10 @@
 // Variables
 
-$brand: #ed648b;
-$brand-state: #da3d28;
+$brand: #FD5D93;
+$brand-state: #EC250D;
+$button-default: #F44336;
 
-$body-background-color: #F8F8FF;
+$background-color: #F8F8FF;
 
 $text-primary: #223464;
 
