--- a/assets/scss/custom/_card.scss
+++ b/assets/scss/custom/_card.scss
@@ -8,6 +8,11 @@
 
   &.card-static{
     display: none;
+    min-height: 515px;
+  }
+
+  &.card-post{
+    min-height: 515px;
   }
 
   .card-header{
@@ -25,9 +30,19 @@
   .card-footer{
     background-color: transparent;
     border-top: none;
+    position: absolute;
+    bottom: 0;
 
     .btn-outline-danger:hover{
       color: #ffffff !important;
+    }
+
+    .btn-outline-danger{
+      border-radius: 30px;
+      font-size: 14px;
+      padding: 10px 24px;
+      text-transform: uppercase;
+      color: $button-default;
     }
   }
 
