--- a/assets/scss/custom/_footer.scss
+++ b/assets/scss/custom/_footer.scss
@@ -1,6 +1,6 @@
 .footer{
   background-color: #FCFCFF;
-  padding-top: 15px;
+  padding-top: 45px;
 
   .made-with-react, .vuejs-expo{
     /* To correctly align image, regardless of content height: */
@@ -9,7 +9,7 @@
    /* To horizontally center images and caption */
    text-align: center;
    /* The width of the container also implies margin around the images. */
-   width: 120px;
+   width: 140px;
 
    .float-buttons{
      display: block;
@@ -19,10 +19,32 @@
      height: 80px;
      width: 80px;
      img{
-       padding: 17px;
+       width: 65px;
+       margin-top: 7px;
      }
    }
+   .text-float-buttons{
+     font-weight: bold;
+     font-size: 18px;
+   }
   }
+
+  .footer-title{
+    font-size: 18px;
+    font-weight: bold;
+    color: $text-primary;
+  }
+
+  .footer-text{
+    color: $text-primary;
+  }
+
+  .footer-img{
+    width: 20px;
+    height: 20px;
+    margin: 0 10px;
+  }
+
   .social-area{
     max-width: 400px;
     display: block;
@@ -32,6 +54,20 @@
       list-style: none;
       margin: 0;
       padding: 0;
+    }
+    p{
+      color: $text-primary;
+      font-weight: lighter;
+    }
+  }
+
+  .nav {
+    .nav-item {
+      padding: 4px 0;
+      a{
+        text-transform: uppercase;
+        color: $text-primary;
+      }
     }
   }
 }
