--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-transparent">
   <div class="container">
     <a class="navbar-brand" href="{{@site.url}}">
-      <img alt="Angular Expo" src="{{asset "/img/logo/angular.png"}}" height="24" width="24">
+      <img alt="Angular Expo" src="{{asset "/img/logo/angular.png"}}" height="30" width="30">
       {{@site.title}}
     </a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -18,16 +18,16 @@
           <a href="/blog" class="nav-link">Blog</a>
         </li>
         <li class="nav-item">
-          <a href="#ceva" class="nav-link"><i class="fa fa-twitter"></i></a>
-        </li>
-        <li class="nav-item">
           <a href="#ceva" class="nav-link"><i class="fa fa-facebook"></i></a>
         </li>
         <li class="nav-item">
-          <a href="#ceva" class="nav-link"><i class="fa fa-instagram"></i></a>
+          <a href="#ceva" class="nav-link"><i class="fa fa-twitter"></i></a>
         </li>
         <li class="nav-item">
-          <button type="button" name="button" class="btn btn-danger btn-round ml-2">Submit product</button>
+          <a href="#ceva" class="nav-link"><i class="fa fa-github"></i></a>
+        </li>
+        <li class="nav-item">
+          <button type="button" name="button" class="btn btn-danger btn-round ml-2"><i class="fa fa-plus mr-2"></i>Submit product</button>
         </li>
       </ul>
     </div>
