--- a/partials/post.hbs
+++ b/partials/post.hbs
@@ -1,5 +1,5 @@
 
-<div class="card">
+<div class="card card-post">
   <div class="card-header">
     <a href="{{ url }}">
       <img src="{{feature_image}}" alt="" class="card-img-top">
@@ -17,6 +17,6 @@
     <p class="card-text">{{excerpt characters="100"}}...</p>
   </div>
   <div class="card-footer">
-    <a target="_blank" class="btn btn-outline-danger btn-round btn-sm" href="{{ url }}">Read more</a>
+    <a target="_blank" class="btn btn-outline-danger btn-round" href="{{ url }}">Read more</a>
   </div>
 </div>
