--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -38,7 +38,7 @@
         	</div>
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_20206c0829ddb0efe4d35bc7a_c32002db8f" tabindex="-1" value=""></div>
           <div class="clear submit-button">
-            <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-danger btn-round btn-sm">
+            <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-danger btn-round submit-button">
               Subscribe
             </button>
           </div>
