--- a/assets/scss/custom/_variables.scss
+++ b/assets/scss/custom/_variables.scss
@@ -4,7 +4,7 @@ $brand: #FD5D93;
 $brand-state: #EC250D;
 $button-default: #F44336;
 
-$background-color: #F8F8FF;
+$background-color: #F5F5FC;
 
 $text-primary: #223464;
 
