--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -20,7 +20,8 @@
 
   <link rel="stylesheet" href="{{asset 'assets/css/main.css'}}">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,,600,800,900,300,200" rel="stylesheet">
-  <link rel="stylesheet" href="{{asset "assets/font/font-awesome/css/font-awesome.css"}}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+
   {{ghost_head}}
 
 </head>
