--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -2,7 +2,8 @@
   {{> bsa-1  }}
 </div>
 <div class="card angular-expo--shadow card-tags">
-  <div class="card-header">
+  <div class="card-header d-flex">
+    <i class="far fa-flag"></i>
     <h5>Tags</h5>
   </div>
   <div class="card-body">
@@ -19,7 +20,8 @@
   </div>
 </div>
 <div class="card  angular-expo--shadow card-subscribe">
-  <div class="card-header">
+  <div class="card-header d-flex">
+    <i class="far fa-envelope"></i>
     <h5>Subscribe</h5>
   </div>
   <div class="card-body">
@@ -37,7 +39,7 @@
         		<div class="response" id="mce-success-response" style="display:none"></div>
         	</div>
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_20206c0829ddb0efe4d35bc7a_c32002db8f" tabindex="-1" value=""></div>
-          <div class="clear submit-button">
+          <div class="clear">
             <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-danger btn-round submit-button">
               Subscribe
             </button>
