--- a/assets/scss/custom/_sidebar.scss
+++ b/assets/scss/custom/_sidebar.scss
@@ -1,7 +1,14 @@
 .card-tags{
   .card-header{
+    i{
+      font-size: 18px;
+      margin-right: 10px;
+      margin-top: 3px;
+      color: $text-primary;
+    }
     h5{
       margin-bottom: 0;
+      color: $text-primary;
     }
   }
   .card-body{
@@ -19,10 +26,12 @@
           margin-left: auto;
           right: 10px;
           position: relative;
+            color: $text-primary;
         }
 
         a{
           text-transform: uppercase;
+          color: $text-primary;
         }
       }
     }
@@ -30,8 +39,22 @@
 }
 
 .card-subscribe{
+
+  .card-header{
+    i{
+      font-size: 18px;
+      margin-right: 10px;
+      margin-top: 3px;
+      color: $text-primary;
+    }
+    h5{
+      color: $text-primary;
+    }
+  }
+
   p{
     font-weight: lighter;
+    color: $text-primary;
   }
 
   .card-body{
@@ -52,7 +75,6 @@
         }
       }
     }
-
     .submit-button{
       border-radius: 30px;
       font-size: 14px;
@@ -64,5 +86,14 @@
         color: #ffffff;
       }
     }
+    .clear{
+      margin-top: 30px;
+    }
+  }
+}
+
+.sidebar-page{
+  .card{
+    align-items: center;
   }
 }
