--- a/assets/scss/custom/_subscribe-area.scss
+++ b/assets/scss/custom/_subscribe-area.scss
@@ -9,11 +9,13 @@
     font-size: 24px;
     color: #3C4858;
     font-weight: bold;
+    margin-left: 10px;
   }
   .subscribe-text{
     font-size: 18px;
     color: #3C4858;
     font-weight: lighter;
+    margin-left: 10px;
     line-height: 24px;
   }
   .subscribe-input{
