--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -69,13 +69,13 @@
     <div class="social-area ml-auto mr-auto">
       <ul class="footer-social ml-auto mr-auto justify-content-center">
         <li class="nav-item">
-          <a href="#ceva" class="nav-link"><i class="fa fa-facebook"></i></a>
+          <a href="#ceva" class="nav-link"><i class="fab fa-facebook-f"></i></a>
         </li>
         <li class="nav-item">
-          <a href="#ceva" class="nav-link"><i class="fa fa-twitter"></i></a>
+          <a href="#ceva" class="nav-link"><i class="fab fa-twitter"></i></a>
         </li>
         <li class="nav-item">
-          <a href="#ceva" class="nav-link"><i class="fa fa-github"></i></a>
+          <a href="#ceva" class="nav-link"><i class="fab fa-github"></i></a>
         </li>
         <li class="nav-item">
           <a href="#ceva" class="nav-link"><i class="fa fa-rss"></i></a>
