--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -18,13 +18,13 @@
           <a href="/blog" class="nav-link">Blog</a>
         </li>
         <li class="nav-item">
-          <a href="#ceva" class="nav-link"><i class="fa fa-facebook"></i></a>
+          <a href="#ceva" class="nav-link"><i class="fab fa-facebook-f"></i></a>
         </li>
         <li class="nav-item">
-          <a href="#ceva" class="nav-link"><i class="fa fa-twitter"></i></a>
+          <a href="#ceva" class="nav-link"><i class="fab fa-twitter"></i></a>
         </li>
         <li class="nav-item">
-          <a href="#ceva" class="nav-link"><i class="fa fa-github"></i></a>
+          <a href="#ceva" class="nav-link"><i class="fab fa-github"></i></a>
         </li>
         <li class="nav-item">
           <button type="button" name="button" class="btn btn-danger btn-round ml-2"><i class="fa fa-plus mr-2"></i>Submit product</button>
