--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -4,14 +4,14 @@
   <ul class="pagination justify-content-center align-items-center">
     <li class="page-item">
       {{#if prev}}
-        <a class="page-link" href="{{page_url prev}}">PREV</a>
+        <a class="page-link" href="{{page_url prev}}"><i class="fas fa-chevron-left"></i></a>
       {{/if}}
     </li>
 
     <span class="page-number">Page {{page}} of {{pages}}</span>
     <li class="page-item">
       {{#if next}}
-        <a class="page-link" href="{{page_url next}}">NEXT</a>
+        <a class="page-link" href="{{page_url next}}"><i class="fas fa-chevron-right"></i></a>
       {{/if}}
     </li>
   </ul>
