--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7197,6 +7197,22 @@ a {
     padding: 9px 24px;
     border: none; }
 
+.navbar .navbar-toggler {
+  font-size: 1.25rem;
+  line-height: 1;
+  padding: .25rem .75rem;
+  border: .0625rem solid transparent;
+  border-radius: .25rem;
+  background-color: transparent;
+  color: #223464; }
+
+.navbar .navbar-toggler-icon {
+  color: #223464; }
+
+@media (min-width: 992px) {
+  .navbar-toggler {
+    display: none; } }
+
 .section-search {
   max-width: 560px; }
   .section-search .form-search {
