--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,10 +1,13 @@
 
-<nav class="navbar navbar-expand-lg navbar-transparent">
+<nav class="navbar navbar-expand-lg navbar-transparent navbar-light">
   <div class="container">
     <a class="navbar-brand" href="{{@site.url}}">
       <img alt="Angular Expo" src="{{asset "/img/logo/angular.png"}}" height="30" width="30">
       {{@site.title}}
     </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         {{#foreach navigation}}
