--- a/assets/scss/_code-fund.scss
+++ b/assets/scss/_code-fund.scss
@@ -33,6 +33,10 @@
     }
     .cf-media-body{
       align-self: center;
+      margin-left: 10px;
+    }
+    .cf-impression{
+      display: none;
     }
   }
   img{
