feature/small style changes for pages

--- a/page.hbs
+++ b/page.hbs
@@ -7,13 +7,13 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <div class="card">
+          <div class="card card-page">
             <div class="card-header">
               <div class="card-title">
                 <a href="{{ url }}">{{title}}</a>
               </div>
             </div>
-            <div class="card-body">
+            <div class="card-body card-text">
               {{content}}
             </div>
           </div>
