--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7117,6 +7117,12 @@ a {
   .card.card-post {
     min-height: 515px;
     height: auto; }
+  .card.card-page .card-header .card-title {
+    font-size: 34px;
+    font-weight: bold;
+    color: #3C4858; }
+    .card.card-page .card-header .card-title:hover {
+      color: #3C4858 !important; }
   .card .card-header {
     background-color: transparent;
     border-bottom: none;
