--- a/assets/scss/custom/_card.scss
+++ b/assets/scss/custom/_card.scss
@@ -21,6 +21,18 @@
     height: auto;
   }
 
+  &.card-page{
+    .card-header .card-title{
+      font-size: 34px;
+      font-weight: bold;
+      color: $card-title;
+
+      &:hover{
+        color: $card-title !important;
+      }
+    }
+  }
+
   .card-header{
     background-color: transparent;
     border-bottom: none;
