--- a/assets/scss/custom/_footer.scss
+++ b/assets/scss/custom/_footer.scss
@@ -71,3 +71,15 @@
     }
   }
 }
+@media (max-width: 576px) {
+  .footer{
+    .responsive-footer{
+      div{
+        text-align: center;
+        div.d-flex{
+          justify-content: center;
+        }
+      }
+    }
+  }
+}
