--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -21,7 +21,7 @@
         </div>
       </div>
     </div>
-    <div class="row pt-5 pl-5 pr-5">
+    <div class="row pt-5 pl-5 pr-5 responsive-footer">
       <div class="col-md-3">
         <div class="d-flex">
           <img src="{{asset "img/logo/angular.png"}}" alt="angular" class="footer-img">
