feature/ fixed navbar links and added footer links

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -4,18 +4,18 @@
     <div class="row">
       <div class="col-lg-4 col-md-6 ml-auto mr-auto d-flex justify-content-center">
         <div class="vuejs-expo">
-          <a href="/madewithreact" class="float-buttons ml-auto mr-auto mb-3">
+          <a href="https://vuejsexpo.com/?ref=angularexpo" target="_blank" class="float-buttons ml-auto mr-auto mb-3">
             <img src="{{asset "img/icon-vue.png"}}" alt="vuejs">
           </a>
-          <a href="/madewithreact" class="text-float-buttons">
+          <a href="https://vuejsexpo.com/?ref=angularexpo" target="_blank" class="text-float-buttons">
             Vuejs Expo
           </a>
         </div>
         <div class="made-with-react">
-          <a href="/madewithreact" class="float-buttons ml-auto mr-auto mb-3">
+          <a href="https://madewithreact.com/?ref=angularexpo" target="_blank" class="float-buttons ml-auto mr-auto mb-3">
             <img src="{{asset "img/icon-react.png"}}" alt="madewithreact">
           </a>
-          <a href="/madewithreact" class="text-float-buttons">
+          <a href="https://madewithreact.com/?ref=angularexpo" target="_blank" class="text-float-buttons">
             Made with React
           </a>
         </div>
@@ -61,7 +61,7 @@
         <h5 class="footer-title">Special Thanks</h5>
         <ul class="nav flex-column list-unstyled">
           <li class="nav-item"><a href="https://iradesign.io/?ref=angularexpo">IRA Design</a></li>
-          <li class="nav-item"><a href="https://www.creative-tim.com/templates/angular?ref=angularexpo">Creative Tim</a></li>
+          <li class="nav-item"><a href="https://www.creative-tim.com/templates/angular?partner=93321">Creative Tim</a></li>
         </ul>
       </div>
     </div>
@@ -69,16 +69,16 @@
     <div class="social-area ml-auto mr-auto">
       <ul class="footer-social ml-auto mr-auto justify-content-center">
         <li class="nav-item">
-          <a href="#ceva" class="nav-link"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/AngularExpo/" target="_blank" class="nav-link"><i class="fab fa-facebook-f"></i></a>
         </li>
         <li class="nav-item">
-          <a href="#ceva" class="nav-link"><i class="fab fa-twitter"></i></a>
+          <a href="https://twitter.com/AngularExpo" target="_blank" class="nav-link"><i class="fab fa-twitter"></i></a>
         </li>
         <li class="nav-item">
-          <a href="#ceva" class="nav-link"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/expojs/angularexpo" target="_blank" class="nav-link"><i class="fab fa-github"></i></a>
         </li>
         <li class="nav-item">
-          <a href="#ceva" class="nav-link"><i class="fa fa-rss"></i></a>
+          <a href="https://angularexpo.com/rss/" target="_blank" class="nav-link"><i class="fa fa-rss"></i></a>
         </li>
       </ul>
       <p class="text-center">Copyright © 2019 Angular Expo. All Rights Reserved.</p>
