--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -27,11 +27,10 @@
           <a href="https://twitter.com/AngularExpo" target="_blank" class="nav-link"><i class="fab fa-twitter"></i></a>
         </li>
         <li class="nav-item">
-          <a href="https://github.com/expojs/angularexpo" target="
-          " class="nav-link"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/expojs/angularexpo" target="_blank" class="nav-link"><i class="fab fa-github"></i></a>
         </li>
         <li class="nav-item">
-          <button type="button" name="button" class="btn btn-danger btn-round ml-2"><i class="fa fa-plus mr-2"></i>Submit product</button>
+          <a type="text" href="https://docs.google.com/forms/d/1I_FAai7Z5VFpZvOxFS68yZsCDsAngnOknIqzCwbBjE0" class="btn btn-danger btn-round ml-2"><i class="fa fa-plus mr-2"></i>Submit product</a>
         </li>
       </ul>
     </div>
