--- a/assets/scss/custom/_footer.scss
+++ b/assets/scss/custom/_footer.scss
@@ -15,7 +15,7 @@
      display: block;
      background-color: #fff;
      border-radius: 50%;
-     box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
+     box-shadow: $shadow-default;
      height: 80px;
      width: 80px;
      img{
