--- a/assets/scss/custom/_subscribe-area.scss
+++ b/assets/scss/custom/_subscribe-area.scss
@@ -24,7 +24,7 @@
       position: relative;
       border-radius: 40px;
       display: flex;
-      box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
+      box-shadow: $shadow-default;
       padding: 10px;
       background: #ffffff;
 
