--- a/assets/scss/custom/_sections.scss
+++ b/assets/scss/custom/_sections.scss
@@ -6,7 +6,7 @@
 
     .form-control-search{
       border-radius: 65px;
-      box-shadow: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
+      box-shadow: $shadow-default;
       border: none;
       color: $text-primary;
       display: block;
