--- a/post.hbs
+++ b/post.hbs
@@ -24,7 +24,9 @@
                     </span>
                   </div>
                   <a class="card-title" target="_blank" href="{{ url }}" >{{title}}</a>
-                  <p class="card-text">{{excerpt}}</p>
+                  <p>
+                    {{content}}
+                  </p>
                   <br>
                   <hr>
                 </div>
