--- a/assets/scss/custom/_sections.scss
+++ b/assets/scss/custom/_sections.scss
@@ -62,13 +62,17 @@
 
     .form-control{
       border-radius: 30px;
-      border: 1px solid $text-primary;
+      border: 1px solid #d7d7d7;
       color: $text-primary;
       display: block;
       padding: 23px;
       font-weight: 400;
       font-size: 14px;
       background-color: $background-color;
+
+      &:active{
+        border: 1px solid $text-primary;
+      }
     }
     .btn-submit{
       position: absolute;
