--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7134,14 +7134,6 @@ a {
   .card .card-footer {
     background-color: transparent;
     border-top: none; }
-    .card .card-footer .btn-outline-danger:hover {
-      color: #ffffff !important; }
-    .card .card-footer .btn-outline-danger {
-      border-radius: 30px;
-      font-size: 14px;
-      padding: 10px 24px;
-      text-transform: uppercase;
-      color: #F44336; }
   .card .card-body {
     padding-top: 0;
     padding-bottom: 0; }
@@ -7336,6 +7328,15 @@ a {
 
 .fa-github, .fa-twitter {
   font-size: 21px !important; }
+
+.btn-outline-danger {
+  border-radius: 30px;
+  font-size: 14px;
+  padding: 10px 24px;
+  text-transform: uppercase;
+  color: #F44336; }
+  .btn-outline-danger:hover {
+    color: #ffffff !important; }
 
 .pagination .page-item .page-link {
   font-size: 14px;
