--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -42,4 +42,33 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<script src="https://unpkg.com/@tryghost/content-api@1.3.4/umd/content-api.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/ghost-search@1.1.0/dist/ghost-search.min.js"></script>
+
+<script type="text/javascript">
+    let ghostSearch = new GhostSearch({
+        key: 'd125b81e057f3c2777a56f542a', // This is just a demo key. Replace the key with a real one. See Step 3.
+        url: 'http://localhost:2389',
+        input: '#my-custom-input',
+        results: '#my-custom-results',
+        options: {
+            keys: [
+                'name',
+            ],
+        },
+        api: {
+            resource: 'tags',
+            parameters: {
+                fields: ['name', 'slug'],
+            },
+        },
+        template: function(result) {
+            let url = [location.protocol, '//', location.host].join('') + '/tag';
+            return '<a href="' + url + '/' + result.slug + '/">' + result.name + '</a>';
+        }
+    })
+</script>
+
 </html>
