--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -66,7 +66,9 @@
         },
         template: function(result) {
             let url = [location.protocol, '//', location.host].join('') + '/tag';
-            return '<a href="' + url + '/' + result.slug + '/">' + result.name + '</a>';
+            return `<div class="search-menu-tags">
+            <a href="` + url + `/` + result.slug + `/">` + result.name + `</a>
+            </div>`;
         }
     })
 </script>
